syntax = "proto3";

package go.micro.bookstore.srv.auth;

service Auth {
	rpc Authorize(AuthorizeRequest) returns (AuthorizeResponse) {}
	rpc Token(TokenRequest) returns (TokenResponse) {}
	rpc Revoke(RevokeRequest) returns (RevokeResponse) {}
}

message Token {
	string access_token = 1;
	string token_type = 2;
	int64 expires_at = 3;
}

message AuthorizeRequest {
	string access_token = 1;
}

message AuthorizeResponse {
	int32 code = 1;
	string detail = 2;
	string client_id = 3;
}

message TokenRequest {
	string client_id = 1;
	string issuer = 2;
}

message TokenResponse {
	int32 code = 1;
	string detail = 2;
	Token token = 3;
}

message RevokeRequest {
	string access_token = 1;
}

message RevokeResponse {
	int32 code = 1;
	string detail = 2;
}